syntax="proto3";

package numbers;

option go_package = "./randomNumber";

message RandomNumberRequest{
    int64 number = 1;
}

message RandomNumberResponse{
    int64 originalNumber = 1;
    int64 totalNumber = 2;
}

service RandomService{
    rpc AddRandomNumber(RandomNumberRequest) returns (stream RandomNumberResponse);
    rpc SubstractRandomNumber(RandomNumberRequest) returns (stream RandomNumberResponse);
}